feat: implement JWT-based authentication system and add searchable select component to UI